# apex-s44-monitor

./: .claude.md  .env.example  .gitignore  2026.01.09 - Debtwire - Asda Group Ltd - Export (2) - Copy.xlsx  2026.01.09 - Debtwire - INEOS Quattro Holdings Ltd - Export (1) - Copy.xlsx  2026.01.09 - Debtwire - Iceland foods Ltd - Export - Copy.xlsx  2026.01.09 - Debtwire - Samhallsbyggnadsbolaget i Norden AB - Export (1) - Copy.xlsx  2026.01.09 - Debtwire - VodafoneZiggo Group Holding BV - Export - Copy.xlsx  Dockerfile  README.md  SYNC_GUIDE.md  SYSTEM_ARCHITECTURE.md  apex_monitor.py  deploy.sh  docker-compose.yml  ingest_trading_knowledge.py  live_dashboard.py  main.py  pyproject.toml  refresh_dashboard.py  requirements-dev.txt  requirements-trading.txt  requirements.txt  run_trading.sh  setup_mac.sh  setup_windows.bat  start_dashboard.bat  start_offline.bat  twitter_alpha_scanner.py
.streamlit/: config.toml
agents/: __init__.py  coordinator.py  edge_scorer.py  psychologist.py  risk_manager.py
analyzers/: situation_classifier.py
config/: __init__.py  equity_tickers.json  news_sources.json  settings.py
core/: __init__.py  adaptive_weights.py  base_agent.py  broker.py  capital_tracker.py  data_cache.py  edge_component_learner.py  model_manager.py  models.py  pattern_learner.py  secure_pickle.py
credit_catalyst/: __init__.py  main.py  requirements.txt
dashboard/: __init__.py  app.py  server.py
data/: __init__.py  isda_precedents.json  market_data_providers.py  maturity_wall.json  patterns.json  sponsors.json
database/: __init__.py  db.py  schema.sql
(+749 files in other folders)
